<resources>
    <string name="app_name">Калькулятор</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_multiply">*</string>
    <string name="key_dividee">÷</string>
    <string name="key_clear">AC</string>
    <string name="key_percent">%</string>
    <string name="key_equal">=</string>
    <string name="key_back">c</string>
    <string name="counter_2">Calculator Listener for HW3</string>
    <string name="_0">0</string>
    <string name="theme_mode">Theme mode dark/light</string>
    <string name="tools_text_text_view">0.0</string>



</resources>